# WeDaka-MCP

./: .env.test.example  .gitignore  LICENSE  README.md  jest.config.js  package-lock.json  package.json  pyproject.toml  run_tests.py  tsconfig.json
src/: index.ts  server.ts
src/__tests__/: WedakaApiClient.test.ts  integration.test.ts  setup.ts
src/client/: WedakaApiClient.ts
src/models/: index.ts
src/server/: index.ts
src/types/: index.ts
src/wedaka/: __init__.py  api_client.py  models.py  server.py
tests/: __init__.py  conftest.py  test_api_integration.py
